syntax = "proto3";

package api;

option go_package = "github.com/devdammit/faceitmate/pkg/api";

service Faceitmate {
  rpc AddPlayer (RegisterPlayerRequest) returns (RegisterWatchingResponse) {}
//  rpc StopWatching (RegisterPlayerRequest) returns (RegisterWatchingResponse) {}
//  rpc CheckCurrentGame (GetFamiliarPlayersRequest) returns (GetFamiliarPlayersResponse) {}
}


message RegisterPlayerRequest {
  string nickname = 1;
}



message RegisterWatchingResponse {
  enum ResponseCode {
    SUCCESS = 0;
    FAILURE = 1;
    NOT_FOUND = 2;
    FACEIT_NOT_RESPONSE = 3;
  }

  ResponseCode response_code = 1;
  string message = 2;
  string player_id = 3;
}

//
//message GetFamiliarPlayersRequest {
//  string player_id = 1;
//  bool non_friends = 2;
//}
//
//message GetFamiliarPlayersResponse {
//  repeated string ids = 1;
//}
//
//
//
//message GetPlayerInfoRequest {
//  string id = 1;
//}
//
//message GetPlayerInfoResponse {
//  string nickname = 1;
//  string new_steam_id = 2;
//  string steam_id_64 = 3;
//  string faceit_url = 4;
//  string country = 5;
//
//  uint32 win_rate = 6;
//  uint32 win_rate_per_20 = 7;
//
//  repeated CommonGame games = 8;
//}
//
//
//
//message CommonGame {
//  message PlayerStats {
//    string id = 1;
//    uint32 kd = 2;
//    uint32 avg = 4;
//  }
//
//  string id = 1;
//  bool is_win = 2;
//
//  PlayerStats person_stats = 3;
//  PlayerStats target_player_stats = 4;
//}
//

